integrate wow.js

--- a/business.html
+++ b/business.html
@@ -69,7 +69,7 @@
 			<span class="next"><i class="glyphicon glyphicon-chevron-right"></i></span>
 		</div>
 		<div class="banner-caption">
-			<h1 class="animated fadeInLeftBig">We Providing</h1>
+			<h1>We Providing</h1>
 			<p>Social Media marketing for businesses</p>
 			<button type="button" class="btn btn-default">Free Consultation</button>
 		</div>
@@ -180,7 +180,7 @@
 				<h1>Our Work</h1>
 				<p>We are added our featured works below</p>
 			</div>
-			<div class="row wow fadeInDown animated">
+			<div class="row">
 				<div class="col-sm-3 col-xs-6">
 					<div class="block-1">
 						<div class="block-1-content">
